--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -10,6 +10,9 @@ main {
 nav{
     background-color: rgba(0,0,0,0.87);
 }
+.navbar{
+    padding: 2%;
+}
 
 footer.page-footer {
     padding-top: 0;
