--- a/main_app/templates/guitars/index.html
+++ b/main_app/templates/guitars/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>GuitarList</h1>
+<h1>Guitar Collection</h1>
 
 {% for guitar in guitars %}
     <div class="card">
