many to many working

--- a/main_app/templates/guitars/details.html
+++ b/main_app/templates/guitars/details.html
@@ -44,5 +44,51 @@
         </table> -->
     </div>
 </div>
+<div class="row">
+  <div class="col s6">
+    <h3>The {{ guitar.name }} was played by:</h3>
+    {% if guitar.guitarists.count %}
+      {% for guitarist in guitar.guitarists.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              {{ guitarist.name }} of {{ guitarist.band }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'unassoc_guitarist' guitar.id guitarist.id %}" method="post">
+                {% csrf_token %}
+              <button type="submit" class="btn">Remove</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Players</h5>
+    {% endif %}
+  </div>
+  <div class="col s6">
+    <h3>All Guitarists</h3>
+    {% if all_guitarists.count %}
+      {% for guitarist in all_guitarists.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              {{ guitarist.name }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'assoc_guitarist' guitar.id guitarist.id %}" method="POST">
+              {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>{{guitar.name}} is played by everyone</h5>
+    {% endif %}
+  </div>
+</div>
 
 {% endblock %}
