--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,6 +19,8 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'guitarist_create' %}">Add Guitarist</a></li>
+          <li><a href="{% url 'guitarist_index' %}">View All Guitarists</a></li>
           <li><a href="{% url 'guitar_create' %}">Add Guitar</a></li>
           <li><a href="{% url 'index' %}">View All My Guitars</a></li>
         </ul>
